// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support - Support Info should match snapshot with hours on desktop 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-1kty7fo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1hn4a1h-MuiGrid-root"
    >
      <svg>
        phone-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        >
          eCommerce Support
        </h6>
        <div
          class="MuiGrid-root MuiGrid-container css-moq4ou-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Email:
            </span>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              >
                 ecomsupport@reece.com
              </span>
            </a>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               877-273-3236
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Hours:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               M-F: 8:00am - 5:30pm EST
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1n3p9vf-MuiGrid-root"
    >
      <svg>
        location-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        >
          Fortiline Waterworks
        </h6>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item css-1esco2c-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
          >
            1628 Barton Chapel Road
             
            
             
            Augusta
            ,
             
            Georgia
             
            30909
          </p>
          <div
            class="MuiGrid-root css-vj1n65-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               
              (703) 737-3705
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-1du6m14-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Hours:
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              >
                M-F: 7:00am - 5:00pm
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              >
                SAT: 9:00am 1:00 PM
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support - Support Info should match the snapshot on desktop 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-1kty7fo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1hn4a1h-MuiGrid-root"
    >
      <svg>
        phone-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        >
          eCommerce Support
        </h6>
        <div
          class="MuiGrid-root MuiGrid-container css-moq4ou-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Email:
            </span>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              >
                 ecomsupport@reece.com
              </span>
            </a>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               877-273-3236
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Hours:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               M-F: 8:00am - 5:30pm EST
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1n3p9vf-MuiGrid-root"
    >
      <svg>
        location-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        >
          Fortiline Waterworks
        </h6>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item css-1esco2c-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
          >
            1628 Barton Chapel Road
             
            
             
            Augusta
            ,
             
            Georgia
             
            30909
          </p>
          <div
            class="MuiGrid-root css-vj1n65-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               
              (703) 737-3705
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-1du6m14-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Hours:
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support - Support Info should match the snapshot on desktop empty data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-1kty7fo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1hn4a1h-MuiGrid-root"
    >
      <svg>
        phone-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        >
          eCommerce Support
        </h6>
        <div
          class="MuiGrid-root MuiGrid-container css-moq4ou-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Email:
            </span>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              >
                 ecomsupport@reece.com
              </span>
            </a>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               877-273-3236
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Hours:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               M-F: 8:00am - 5:30pm EST
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1n3p9vf-MuiGrid-root"
    >
      <svg>
        location-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        />
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item css-1esco2c-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
          >
            
             
            
             
            
            ,
             
            
             
            
          </p>
          <div
            class="MuiGrid-root css-vj1n65-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-1du6m14-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Hours:
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support - Support Info should match the snapshot on desktop no Home Branch 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-1kty7fo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1hn4a1h-MuiGrid-root"
    >
      <svg>
        phone-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        >
          eCommerce Support
        </h6>
        <div
          class="MuiGrid-root MuiGrid-container css-moq4ou-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Email:
            </span>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              >
                 ecomsupport@reece.com
              </span>
            </a>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               877-273-3236
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Hours:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               M-F: 8:00am - 5:30pm EST
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1n3p9vf-MuiGrid-root"
    >
      <svg>
        location-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        />
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item css-1esco2c-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
          >
            
             
            
             
            
            ,
             
            
             
            
          </p>
          <div
            class="MuiGrid-root css-vj1n65-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-1du6m14-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Hours:
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support - Support Info should match the snapshot on moble 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-1kty7fo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1hn4a1h-MuiGrid-root"
    >
      <svg>
        phone-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        >
          eCommerce Support
        </h6>
        <div
          class="MuiGrid-root MuiGrid-container css-moq4ou-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Email:
            </span>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              >
                 ecomsupport@reece.com
              </span>
            </a>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               877-273-3236
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Hours:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               M-F: 8:00am - 5:30pm EST
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1n3p9vf-MuiGrid-root"
    >
      <svg>
        location-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        >
          Fortiline Waterworks
        </h6>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item css-1esco2c-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
          >
            1628 Barton Chapel Road
             
            
             
            Augusta
            ,
             
            Georgia
             
            30909
          </p>
          <div
            class="MuiGrid-root css-vj1n65-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               
              (703) 737-3705
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-1du6m14-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Hours:
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support - Support Info should match the snapshot on moble empty data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-1kty7fo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1hn4a1h-MuiGrid-root"
    >
      <svg>
        phone-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        >
          eCommerce Support
        </h6>
        <div
          class="MuiGrid-root MuiGrid-container css-moq4ou-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Email:
            </span>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              >
                 ecomsupport@reece.com
              </span>
            </a>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               877-273-3236
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Hours:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               M-F: 8:00am - 5:30pm EST
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1n3p9vf-MuiGrid-root"
    >
      <svg>
        location-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        />
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item css-1esco2c-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
          >
            
             
            
             
            
            ,
             
            
             
            
          </p>
          <div
            class="MuiGrid-root css-vj1n65-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-1du6m14-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Hours:
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support - Support Info should match the snapshot on moble no Home Branch 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-1kty7fo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1hn4a1h-MuiGrid-root"
    >
      <svg>
        phone-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        >
          eCommerce Support
        </h6>
        <div
          class="MuiGrid-root MuiGrid-container css-moq4ou-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Email:
            </span>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              >
                 ecomsupport@reece.com
              </span>
            </a>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               877-273-3236
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Hours:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               M-F: 8:00am - 5:30pm EST
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-1n3p9vf-MuiGrid-root"
    >
      <svg>
        location-icon.svg
      </svg>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
        />
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item css-1esco2c-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
          >
            
             
            
             
            
            ,
             
            
             
            
          </p>
          <div
            class="MuiGrid-root css-vj1n65-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
            >
              Phone:
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            >
               
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-1du6m14-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Hours:
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
